# anker-solix-api

./: .gitignore  .pre-commit-config.yaml  LICENSE  Pipfile  README.md  __init__.py  common.py  energy_csv.py  example_c1000x_mqtt_integration.py  export_system.py  feature_162.py  grep_mqtt_cmd.py  inverter_monitor.py  monitor.py  mqtt_monitor.py  newtest.py  pyproject.toml  setup.cfg  solarbank_monitor.py  test_a1790p_mqtt_controls.py  test_all_controls.py  test_api.py  test_c1000x_mqtt_controls.py  test_c1000x_validation.py  test_f3800_mqtt_controls.py  test_powerpanel_disaster.py  test_powerpanel_endpoints.py
.github/: FUNDING.yml  release.yml
api/: api.py  apibase.py  apitypes.py  c1000x_controls.py  credentials.py  energy.py  errors.py  export.py  helpers.py  hesapi.py  mqtt.py  mqtt_c1000x.py  mqtt_charger.py  mqtt_device.py  mqtt_f3800.py  mqtt_factory.py  mqtt_pps.py  mqtt_solarbank.py  mqtt_various.py  mqttcmdmap.py  mqttmap.py  mqtttypes.py  poller.py  powerpanel.py  request.py  schedule.py  session.py  types.py  vehicle.py
api/hes/: __init__.py  api.py
docs/: C1000X_API_Reference.md  C1000X_Integration_Guide.md
examples/: auto_upgrade.json  device_load_9JVB42LJK8J0P5RY.json  device_parm_efaca6b5-f4a0-e82e-3b2e-6b9cf90ded8c.json  power_cutoff_9JVB42LJK8J0P5RY.json  site_detail_efaca6b5-f4a0-e82e-3b2e-6b9cf90ded8c.json  site_list.json  user_devices.json  wifi_list_efaca6b5-f4a0-e82e-3b2e-6b9cf90ded8c.json
examples/MI80_Standalone/: api_account.json  api_devices.json  auto_upgrade.json  bind_devices.json  charging_devices.json  config.json  currency_list.json  device_attrs_JJY4QAVAFKT9.json  device_pv_statistics_JJY4QAVAFKT9.json  device_pv_statistics_month_JJY4QAVAFKT9.json  device_pv_statistics_today_JJY4QAVAFKT9.json  device_pv_statistics_year_JJY4QAVAFKT9.json  device_pv_status_JJY4QAVAFKT9.json  device_pv_total_statistics_JJY4QAVAFKT9.json  get_token.json  homepage.json  list_accessories.json  list_products.json  list_site_rules.json  list_third_platforms.json  message_unread.json  ota_batch.json  setup.txt  shelly_status.json  site_list.json  upgrade_record_1_JJY4QAVAFKT9.json  user_devices.json
examples/PowerPanel_ManualBackup/: charging_disaster_support_func_f6a1b2c3-d4e5-6789-abcd-ef0123456789.json  charging_site_device_disaster_f6a1b2c3-d4e5-6789-abcd-ef0123456789.json  charging_site_device_disaster_status_f6a1b2c3-d4e5-6789-abcd-ef0123456789.json
examples/PowerPanel_ReadEndpoints/: charging_installation_inspection_UUBABYAH2ONIAPD4.json  charging_monetary_units_UUBABYAH2ONIAPD4.json  charging_sns_UUBABYAH2ONIAPD4.json  charging_utility_rate_plan_UUBABYAH2ONIAPD4.json  charging_wifi_info_UUBABYAH2ONIAPD4.json
examples/Powerpanel_Tou/: api_account.json  api_devices.json  api_sites.json  auto_upgrade.json  bind_devices.json  config.json  (+112 more)
tests/: __init__.py  context.py  test_api.py  test_c1000x_mqtt_controls.py  test_powerpanel_disaster.py  test_powerpanel_endpoints.py
(+72 files in other folders)
